# TreOnzDesktop

./: .gitignore  CMakeLists.txt  README.md
Lekhak/: CMakeLists.txt
Navik/: CMakeLists.txt
Vachak/: Xdefaults  Xresources  cshrc  xinitrc
